--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon May 29 2023 17:31:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 05 2023 13:56:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -24,16 +24,16 @@
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
     <div class="navigation-items">
-      <a href="index.html" aria-current="page" class="logo-link w-nav-brand w--current"><img src="images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt=""></a>
+      <a href="index.html" aria-current="page" class="logo-link w-nav-brand w--current"><img src="images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt="Logo" class="image-3"></a>
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
           <a href="index.html" aria-current="page" class="navigation-item w-nav-link w--current">Home</a>
-          <a href="#" class="navigation-item w-nav-link">About</a>
-          <a href="#" class="navigation-item w-nav-link">work</a>
-          <a href="#" class="navigation-item w-nav-link">Contact me</a>
-          <a href="#" class="navigation-item w-nav-link">Resume</a>
+          <a href="#works-grid" class="navigation-item w-nav-link">work</a>
+          <a href="#about" class="navigation-item w-nav-link">About</a>
+          <a href="#wf-form-Email-Form" class="navigation-item w-nav-link">Contact me</a>
+          <a href="resume.html" class="navigation-item w-nav-link">Resume</a>
         </nav>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
       </div>
     </div>
   </div>
@@ -44,12 +44,12 @@
           <div class="name-text">Ayo Akinnawo</div>
           <div class="paragraph-light">Web Developer, Data Analyst/Engineer</div>
         </div>
-        <h1 data-w-id="34f3d0d4-0947-ab41-71bc-490db9f35e98" style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="heading-jumbo"><span class="text-span">Web Developer,</span> Data Analyst based in Dallas, TX. </h1>
+        <h1 data-w-id="34f3d0d4-0947-ab41-71bc-490db9f35e98" style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="heading-jumbo"><span class="text-span">Web Developer,</span> Data Scientist based in Dallas, TX. </h1>
       </div>
     </div>
   </div>
   <div class="section">
-    <div id="works-grid" class="w-layout-grid works-grid">
+    <div id="works-grid" data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fa4" style="opacity:0" class="w-layout-grid works-grid">
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-3fff4113">
         <a href="work/project-1.html" class="link-block w-inline-block"></a>
         <div class="work-description">
@@ -65,81 +65,99 @@
         </div>
       </div>
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fb4-3fff4113" class="div-block-6">
-        <a href="work/project-3.html" class="work-image cc-work-3 w-inline-block"></a>
+        <a href="https://github.com/Ayokunlewaakinnawo/inventoryControl_DataAnalysis/blob/main/Script.ipynb" class="work-image cc-work-3 w-inline-block"></a>
         <div class="work-description">
           <a href="work/project-3.html" class="project-name-link">Project 3 </a>
           <div class="paragraph-light">Data Mining and Data Analysis</div>
         </div>
       </div>
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fbb-3fff4113" class="div-block-5">
-        <a href="work/project-4.html" class="work-image cc-work-4 w-inline-block"></a>
+        <a href="https://github.com/Ayokunlewaakinnawo/Loan-Data-Analytics" class="work-image cc-work-4 w-inline-block"></a>
         <div class="work-description">
-          <a href="work/project-4.html" class="project-name-link">Project 4</a>
+          <a href="#" class="project-name-link">Project 4</a>
           <div class="paragraph-light">Data Mining and Data Analysis</div>
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="carrer-headline-wrap">
-        <h2 class="heading-2">My experience</h2>
-        <p class="paragraph-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+    <div id="works-grid" class="w-layout-grid secondwork">
+      <div id="w-node-_0a3be501-d9d1-bac0-2047-e21450cd4a4b-3fff4113" class="secondworkdiv">
+        <a href="https://github.com/Ayokunlewaakinnawo/voxshop" class="link-block-copy w-inline-block"></a>
+        <div class="work-description">
+          <a href="work/project-1.html" class="project-name-link">Project 1<br></a>
+          <div class="paragraph-light">Full Stack Developement - Django</div>
+        </div>
       </div>
-      <div class="w-layout-grid work-experience-grid">
-        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fc9-3fff4113" class="work-eduposition-wrap">
-          <div><img src="images/Vector-Zercom-Logo.png" loading="lazy" width="125" id="w-node-_858baa71-2f64-b04b-7c82-88a7c54f9646-3fff4113" alt=""></div>
-          <div class="paragraph-light cc-position-name">Web Developer</div>
-          <div class="paragraph-tiny cc-paragraph-tiny-light">Oct 2016— Nov 2018<br></div>
-        </div>
-        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd1-3fff4113" class="work-eduposition-wrap">
-          <div><img src="images/Lidya_logo.png" loading="lazy" width="95" sizes="(max-width: 479px) 100vw, 95px" srcset="images/Lidya_logo-p-500.png 500w, images/Lidya_logo.png 501w" alt=""></div>
-          <div class="paragraph-light cc-position-name">Data Analyst</div>
-          <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2018 — Apr 2019<br></div>
-        </div>
-        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd9-3fff4113" class="work-eduposition-wrap">
-          <div><img src="images/24135971-a880-474b-8c22-56223c5a1819.png" loading="lazy" width="135" alt=""></div>
-          <div class="paragraph-light cc-position-name">Graduate Student Intern</div>
-          <div class="paragraph-tiny cc-paragraph-tiny-light">May 2019— Nov 2019<br></div>
-        </div>
-        <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fe1-3fff4113" class="work-eduposition-wrap">
-          <div>
-            <div><img src="images/Artboard_1.png" loading="lazy" width="70" alt=""></div>
-          </div>
-          <div class="paragraph-light cc-position-name">Data Analyst/Engineer</div>
-          <div class="div-block-2">
-            <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2019 — Present <br></div>
-          </div>
+      <div id="w-node-_0a3be501-d9d1-bac0-2047-e21450cd4a53-3fff4113" class="div-block-7">
+        <a href="work/project-2.html" class="link-block-2 w-inline-block"></a>
+        <div class="work-description">
+          <a href="work/project-2.html" class="project-name-link">Project 2</a>
+          <div class="paragraph-light">Scripting / Software Engineering</div>
         </div>
       </div>
     </div>
-    <div class="container">
+    <section id="about">
+      <div data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fc2" style="opacity:0" class="container">
+        <div class="carrer-headline-wrap">
+          <h2 class="heading-2">My experience</h2>
+          <p class="paragraph-light">Experienced data scientist with a strong foundation in full-stack Django development. Passionate about leveraging data to uncover valuable insights and drive informed decision-making.</p>
+        </div>
+        <div class="w-layout-grid work-experience-grid">
+          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fc9-3fff4113" class="work-eduposition-wrap">
+            <div><img src="images/Vector-Zercom-Logo.png" loading="lazy" width="125" id="w-node-_858baa71-2f64-b04b-7c82-88a7c54f9646-3fff4113" alt="WrkLogo"></div>
+            <div class="paragraph-light cc-position-name">Web Developer</div>
+            <div class="paragraph-tiny cc-paragraph-tiny-light">Oct 2016— Nov 2018<br></div>
+          </div>
+          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd1-3fff4113" class="work-eduposition-wrap">
+            <div><img src="images/Lidya_logo.png" loading="lazy" width="95" sizes="(max-width: 479px) 100vw, 95px" srcset="images/Lidya_logo-p-500.png 500w, images/Lidya_logo.png 501w" alt="WrkLogo"></div>
+            <div class="paragraph-light cc-position-name">Data Analyst</div>
+            <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2018 — Apr 2019<br></div>
+          </div>
+          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd9-3fff4113" class="work-eduposition-wrap">
+            <div><img src="images/24135971-a880-474b-8c22-56223c5a1819.png" loading="lazy" width="135" alt="SchlIcon"></div>
+            <div class="paragraph-light cc-position-name">Graduate Student Intern</div>
+            <div class="paragraph-tiny cc-paragraph-tiny-light">May 2019— Nov 2019<br></div>
+          </div>
+          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fe1-3fff4113" class="work-eduposition-wrap">
+            <div>
+              <div><img src="images/Artboard_1.png" loading="lazy" width="70" alt="WrkLogo"></div>
+            </div>
+            <div class="paragraph-light cc-position-name">Data Analyst/Engineer<br><span class="text-span-4">Python DevOp Engineer</span></div>
+            <div class="div-block-2">
+              <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2019 — Present <br></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div data-w-id="bf7eff07-8f15-6379-ef31-97e9b604d463" style="opacity:0" class="container">
       <div class="carrer-headline-wrap">
         <h2 class="heading-2">My education</h2>
-        <p class="paragraph-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+        <p class="paragraph-light">Graduated with a Master of Science in Computer Info. Science (with a concentration in Cybersecurity) from Harrisburg University of Science and Technology (USA) and a Bachelor of Science in Physics from the University of Lagos (Nigeria).</p>
       </div>
       <div class="w-layout-grid work-experience-grid">
         <div id="w-node-bf7eff07-8f15-6379-ef31-97e9b604d474-3fff4113" class="work-eduposition-wrap">
-          <div class="div-block"><img src="images/10.png" loading="lazy" sizes="(max-width: 479px) 100vw, 95px" width="95" srcset="images/10-p-500.png 500w, images/10.png 600w" alt=""></div>
+          <div class="div-block"><img src="images/10.png" loading="lazy" sizes="(max-width: 479px) 100vw, 95px" width="95" srcset="images/10-p-500.png 500w, images/10.png 600w" alt="schlLogo"></div>
           <div class="paragraph-light cc-position-name"><span class="text-span-2">Harrisburg University of Sci &amp; Tech.<br></span><span class="text-span-3">Masters of Science</span></div>
           <div class="paragraph-tiny cc-paragraph-tiny-light">Computer Science with conc. in Cybersecurity<br></div>
         </div>
         <div id="w-node-f043acba-e121-e5a0-81a0-e93bae00dcdd-3fff4113" class="work-eduposition-wrap">
-          <div class="div-block"><img src="images/university-of-lagos-logo-38976CB5C4-seeklogo.com.png" loading="lazy" width="95" alt=""></div>
+          <div class="div-block"><img src="images/university-of-lagos-logo-38976CB5C4-seeklogo.com.png" loading="lazy" width="95" alt="SchlIcon"></div>
           <div class="paragraph-light cc-position-name"><span class="text-span-2">University of Lagos.<br></span><span class="text-span-3">Bachelors of Science</span></div>
           <div class="paragraph-tiny cc-paragraph-tiny-light">Physics<br></div>
         </div>
       </div>
     </div>
   </div>
-  <div class="section cc-contact">
+  <div data-w-id="d783a17e-0b35-a13a-0448-a852d0df4a24" class="section cc-contact">
     <div class="container">
       <div class="contact">
         <div class="contact-headline">
-          <h3 class="heading">Want to get in touch?<br>Drop me a line!</h3>
-          <p class="paragraph-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+          <h3 class="heading">Want to get in touch?<br></h3>
+          <p class="paragraph-light">Feel free to drop a message here.</p>
         </div>
         <div class="contact-form-wrap">
           <div class="w-form">
-            <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" method="get" class="contact-form">
+            <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" method="get" class="contact-form" data-wf-page-id="641b5e72069a0f4b3fff4113" data-wf-element-id="d783a17e-0b35-a13a-0448-a852d0df4a30">
               <div class="w-layout-grid contact-form-grid">
                 <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a32-d0df4a24"><label for="Name-3">Name</label><input type="text" class="text-field w-input" maxlength="256" name="Name" data-name="Name" placeholder="Enter your name" id="Name"></div>
                 <div id="w-node-d783a17e-0b35-a13a-0448-a852d0df4a36-d0df4a24"><label for="Email-3">Email Address</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Enter your email" id="Email" required=""></div>
@@ -159,7 +177,7 @@
   </div>
   <div class="footer-wrap">
     <div>
-      <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="images/ezgif.com-gif-maker-4.gif" width="15" alt="" class="webflow-logo-tiny"></a>
+      <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="images/ezgif.com-gif-maker-4.gif" width="15" alt="Logo" class="webflow-logo-tiny"></a>
     </div>
     <div class="footer-links"></div>
   </div>
