--- a/work/project-1.html
+++ b/work/project-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon May 29 2023 17:31:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 05 2023 13:56:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f30ecff4118" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -22,13 +22,16 @@
 <body class="body-2">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
     <div class="navigation-items">
-      <a href="../index.html" class="logo-link w-nav-brand"><img src="../images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt=""></a>
+      <a href="../index.html" class="logo-link w-nav-brand"><img src="../images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt="Logo" class="image-3"></a>
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
           <a href="../index.html" class="navigation-item w-nav-link">Home</a>
-          <a href="../about.html" class="navigation-item w-nav-link">About</a>
+          <a href="#" class="navigation-item w-nav-link">work</a>
+          <a href="#" class="navigation-item w-nav-link">About</a>
+          <a href="#" class="navigation-item w-nav-link">Contact me</a>
+          <a href="../resume.html" class="navigation-item w-nav-link">Resume</a>
         </nav>
-        <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
       </div>
     </div>
   </div>
@@ -37,11 +40,14 @@
       <div class="w-layout-grid project-overview-grid">
         <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-ecff4118">
           <h1 class="heading-jumbo">Project 1</h1>
-          <div class="paragraph-light">Web Developement</div>
+          <div class="paragraph-light">Web Application</div>
+          <a href="#" class="w-inline-block">
+            <div class="paragraph-light">Live site: <span>https://www.africadatafoundation.org</span><br></div>
+          </a>
         </div>
         <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-ecff4118">
           <div class="position-name-text">Project Overview</div>
-          <div class="paragraph-light cc-position-name">African Data Foundation website was developed using markup languages such as HTML, CSS, and programming language JavaScript. This project involves several stages, including planning, design, development, testing, launch, and maintenance. During the planning stage, the project scope, objectives, requirements, and timelines are defined, and a strategy is created to achieve the project goals. Webflow was used in structuring the entire site for time effieciency betwwen the idea and the execution.<br><br>Live site: www.africadatafoundation.org<br>‍</div>
+          <div class="paragraph-light cc-position-name">African Data Foundation web application was developed with the Django sitting as the base framework using markup languages such as HTML, CSS, and  JavaScript for the frontend. This project involves several stages, including planning, design, development, testing, launch, and maintenance. During the planning stage, the project scope, objectives, requirements, and timelines are defined, and a strategy is created to achieve the project goals. Webflow was used in structuring the entire site for time efficiency between the idea and the execution.<br><br>‍</div>
         </div>
         <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-ecff4118">
           <div class="position-name-text">My Contributions</div>
@@ -50,7 +56,7 @@
       </div>
     </div>
   </div>
-  <div class="section"><img src="../images/ezgif.com-crop-1.gif" alt="" class="detail-header-image"></div>
+  <div class="section"><img src="../images/ezgif.com-crop-1.gif" alt="PortfolioImg" class="detail-header-image"></div>
   <div class="section">
     <div class="container">
       <div class="w-layout-grid project-description-grid">
@@ -63,19 +69,19 @@
       </div>
     </div>
   </div>
-  <div class="section"><img src="../images/Screen-Shot-2023-05-29-at-11.00.43-AM.png" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" srcset="../images/Screen-Shot-2023-05-29-at-11.00.43-AM.png 500w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM.png 800w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM.png 1080w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM.png 1600w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM.png 2000w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM.png 2600w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM.png 2874w" alt="" class="detail-image"><img src="../images/Screen-Shot-2023-05-29-at-11.01.33-AM.png" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" srcset="../images/Screen-Shot-2023-05-29-at-11.01.33-AM.png 500w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM.png 800w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM.png 1080w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM.png 1600w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM.png 2000w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM.png 2600w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM.png 2874w" alt="" class="detail-image"><img src="../images/Screen-Shot-2023-05-29-at-11.22.56-AM.png" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" srcset="../images/Screen-Shot-2023-05-29-at-11.22.56-AM.png 500w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM.png 800w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM.png 1080w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM.png 1600w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM.png 2000w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM.png 2600w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM.png 2874w" alt="" class="detail-image"></div>
+  <div class="section"><img src="../images/Screen-Shot-2023-05-29-at-11.00.43-AM.png" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" srcset="../images/Screen-Shot-2023-05-29-at-11.00.43-AM-p-500.png 500w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM-p-800.png 800w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM-p-1080.png 1080w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM-p-1600.png 1600w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM-p-2000.png 2000w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM-p-2600.png 2600w, ../images/Screen-Shot-2023-05-29-at-11.00.43-AM.png 2874w" alt="PortfolioImg" class="detail-image"><img src="../images/Screen-Shot-2023-05-29-at-11.01.33-AM.png" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" srcset="../images/Screen-Shot-2023-05-29-at-11.01.33-AM-p-500.png 500w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM-p-800.png 800w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM-p-1080.png 1080w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM-p-1600.png 1600w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM-p-2000.png 2000w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM-p-2600.png 2600w, ../images/Screen-Shot-2023-05-29-at-11.01.33-AM.png 2874w" alt="PortfolioImg" class="detail-image"><img src="../images/Screen-Shot-2023-05-29-at-11.22.56-AM.png" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" srcset="../images/Screen-Shot-2023-05-29-at-11.22.56-AM-p-500.png 500w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM-p-800.png 800w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM-p-1080.png 1080w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM-p-1600.png 1600w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM-p-2000.png 2000w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM-p-2600.png 2600w, ../images/Screen-Shot-2023-05-29-at-11.22.56-AM.png 2874w" alt="PortfolioImg" class="detail-image"></div>
   <div class="section">
     <div class="container">
       <div class="email-section">
         <h3>View some of my work </h3>
-        <p>If you like what you see and want to work together, get in touch!</p>
+        <p>on my GitHub repository at;</p>
         <a href="mailto:jane@portfolio.com?subject=You&#x27;ve%20got%20mail!" class="email-link">https://github.com/Ayokunlewaakinnawo</a>
       </div>
     </div>
   </div>
   <div class="footer-wrap">
     <div>
-      <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="../images/ezgif.com-gif-maker-4.gif" width="15" alt="" class="webflow-logo-tiny"></a>
+      <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="../images/ezgif.com-gif-maker-4.gif" width="15" alt="Logo" class="webflow-logo-tiny"></a>
     </div>
     <div class="footer-links"></div>
   </div>
