--- a/work/project-3.html
+++ b/work/project-3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon May 29 2023 17:31:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 05 2023 13:56:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f3f78ff411a" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -22,13 +22,16 @@
 <body class="body-4">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
     <div class="navigation-items">
-      <a href="../index.html" class="logo-link w-nav-brand"><img src="../images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt=""></a>
+      <a href="../index.html" class="logo-link w-nav-brand"><img src="../images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt="Logo" class="image-3"></a>
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
           <a href="../index.html" class="navigation-item w-nav-link">Home</a>
-          <a href="../about.html" class="navigation-item w-nav-link">About</a>
+          <a href="#" class="navigation-item w-nav-link">work</a>
+          <a href="#" class="navigation-item w-nav-link">About</a>
+          <a href="#" class="navigation-item w-nav-link">Contact me</a>
+          <a href="../resume.html" class="navigation-item w-nav-link">Resume</a>
         </nav>
-        <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
       </div>
     </div>
   </div>
@@ -41,11 +44,11 @@
         </div>
         <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-78ff411a">
           <div class="position-name-text">Project Overview</div>
-          <div class="paragraph-light cc-position-name">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. </div>
+          <div class="paragraph-light cc-position-name">This project is a concise demonstration of the comprehensive continuous data mining and engineering project I worked on at Vox Technologies. Throughout the project, my main objective was to develop scripts that would facilitate the creation of new data pipelines to provide valuable insights into inventory management. Additionally, I successfully created data pipelines for order tracking, quote requests, and other relevant aspects of the business operations.One of the crucial tasks was transforming the newly developed data pipelines into visually appealing presentations for executives and stakeholders. To accomplish this, I utilized various tools and technologies. Azure Data Studio played a pivotal role in writing queries and extracting data from the database. Jupyter Notebook provided a robust development environment for data exploration and analysis. For handling large-scale data processing, I utilized Pyspark and Snowflakes. Finally, Power BI served as the go-to tool for data visualization and generating insightful reports. To ensure efficient collaboration and version control, I leveraged Git for sharing code and facilitating collaboration among team members.Overall, this project exemplified my expertise in data mining, engineering, and visualization while utilizing a range of powerful tools to deliver valuable insights to the executive team and stakeholders at Vox Technologies.</div>
         </div>
         <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-78ff411a">
           <div class="position-name-text">My Contributions</div>
-          <div class="paragraph-light cc-position-name">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</div>
+          <div class="paragraph-light cc-position-name">As the sole proprietor of this project, I was responsible for overseeing and actively participating in all aspects of its execution. This included preliminary preparation, where I generated ideas and devised strategies for accomplishing each task within the project. I also collaborated closely with the sales team to conduct internal research, aiming to gain a thorough understanding of the high-priority key performance metrics that would drive efficient workflows.<br><br>IDE Tools : Jupyter notebook, Pyspark, Snowflake, Azure data studio, <br>Language Used: Python<br>Visualiation tool: Power BI<br>‍<br></div>
         </div>
       </div>
     </div>
@@ -54,7 +57,7 @@
   <div class="section">
     <div class="container">
       <div class="w-layout-grid project-description-grid">
-        <div id="w-node-b915ad84-715b-fc9d-8156-ee63d52fd22b-78ff411a" class="paragraph-light">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. <br>‍<br>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. <br>‍<br>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. </div>
+        <div id="w-node-b915ad84-715b-fc9d-8156-ee63d52fd22b-78ff411a" class="paragraph-light">Throughout the project, I utilized a variety of IDE tools to facilitate different stages of the data mining and engineering process. Jupyter Notebook provided an interactive and versatile environment for data exploration, analysis, and script development. Pyspark and Snowflake were instrumental in handling large datasets and enabling efficient data processing.<br>Azure Data Studio played a crucial role in managing the project&#x27;s database, allowing me to write queries, extract data, and perform necessary transformations. Python served as the primary programming language for implementing various algorithms, data manipulation, and model development.<br>For data visualization, I employed Power BI, a powerful and intuitive tool for creating visually compelling reports and dashboards. Power BI enabled me to effectively communicate the project&#x27;s insights and findings to stakeholders, providing them with a comprehensive understanding of the data-driven outcomes.Overall, the combination of Jupyter Notebook, Pyspark, Snowflake, Azure Data Studio, Python, and Power BI formed a robust and comprehensive toolkit that facilitated efficient and impactful execution of the project&#x27;s objectives.</div>
         <div id="w-node-_32040423-4078-1b23-6771-e6c78f8a716d-78ff411a" class="work-eduposition-wrap">
           <div class="position-name-text">Webflow</div>
           <div class="paragraph-light cc-position-name">Visual Developer</div>
@@ -69,13 +72,13 @@
       <div class="email-section">
         <h3>Want to work together?</h3>
         <p>If you like what you see and want to work together, get in touch!</p>
-        <a href="mailto:jane.lo@portfolio.com?subject=You&#x27;ve%20got%20mail!" class="email-link">jane@portfolio.com</a>
+        <a href="mailto:jane.lo@portfolio.com?subject=You&#x27;ve%20got%20mail!" class="email-link">https://github.com/Ayokunlewaakinnawo</a>
       </div>
     </div>
   </div>
   <div class="footer-wrap">
     <div>
-      <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="../images/ezgif.com-gif-maker-4.gif" width="15" alt="" class="webflow-logo-tiny"></a>
+      <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="../images/ezgif.com-gif-maker-4.gif" width="15" alt="Logo" class="webflow-logo-tiny"></a>
     </div>
     <div class="footer-links"></div>
   </div>
