--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon May 29 2023 17:31:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 05 2023 13:56:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f337fff4115" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body>
+<body class="body-7">
   <div class="utility-page-wrap">
     <div class="_404-wrap">
       <div class="_404-content-wrap">
