--- a/work/project-2.html
+++ b/work/project-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon May 29 2023 17:31:22 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 05 2023 13:56:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f0f82ff4119" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -22,13 +22,16 @@
 <body class="body-3">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
     <div class="navigation-items">
-      <a href="../index.html" class="logo-link w-nav-brand"><img src="../images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt=""></a>
+      <a href="../index.html" class="logo-link w-nav-brand"><img src="../images/ezgif.com-gif-maker-4.gif" loading="lazy" width="100" alt="Logo" class="image-3"></a>
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
           <a href="../index.html" class="navigation-item w-nav-link">Home</a>
-          <a href="../about.html" class="navigation-item w-nav-link">About</a>
+          <a href="#" class="navigation-item w-nav-link">work</a>
+          <a href="#" class="navigation-item w-nav-link">About</a>
+          <a href="#" class="navigation-item w-nav-link">Contact me</a>
+          <a href="../resume.html" class="navigation-item w-nav-link">Resume</a>
         </nav>
-        <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
       </div>
     </div>
   </div>
@@ -51,7 +54,7 @@
     </div>
   </div>
   <div class="section">
-    <div class="div-block-4"><img src="../images/Screen-Shot-2023-04-05-at-1.50.48-PM.png" srcset="../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-500.png 500w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-800.png 800w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-1080.png 1080w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-1600.png 1600w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-2000.png 2000w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-2600.png 2600w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM.png 2836w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" alt="" class="detail-header-image"></div>
+    <div class="div-block-4"><img src="../images/Screen-Shot-2023-04-05-at-1.50.48-PM.png" srcset="../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-500.png 500w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-800.png 800w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-1080.png 1080w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-1600.png 1600w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-2000.png 2000w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-2600.png 2600w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM.png 2836w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" alt="PortfolioImg" class="detail-header-image"></div>
   </div>
   <div class="section">
     <div class="container">
@@ -65,7 +68,7 @@
       </div>
     </div>
   </div>
-  <div class="section"><img src="../images/ezgif.com-video-to-gif-2.gif" width="920" alt="" class="detail-image"><img src="../images/port1.PNG" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" srcset="../images/port1-p-500.png 500w, ../images/port1-p-800.png 800w, ../images/port1-p-1080.png 1080w, ../images/port1.PNG 1920w" alt="" class="detail-image"><img src="../images/port2.PNG" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" srcset="../images/port2-p-500.png 500w, ../images/port2-p-800.png 800w, ../images/port2-p-1080.png 1080w, ../images/port2.PNG 1920w" alt="" class="detail-image"></div>
+  <div class="section"><img src="../images/ezgif.com-video-to-gif-2.gif" width="920" alt="PortfolioImg" class="detail-image"><img src="../images/port1.PNG" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" srcset="../images/port1-p-500.png 500w, ../images/port1-p-800.png 800w, ../images/port1-p-1080.png 1080w, ../images/port1.PNG 1920w" alt="PortfolioImg" class="detail-image"><img src="../images/port2.PNG" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" srcset="../images/port2-p-500.png 500w, ../images/port2-p-800.png 800w, ../images/port2-p-1080.png 1080w, ../images/port2.PNG 1920w" alt="PortfolioImg" class="detail-image"></div>
   <div class="section">
     <div class="container">
       <div class="email-section">
@@ -77,7 +80,7 @@
   </div>
   <div class="footer-wrap">
     <div>
-      <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="../images/ezgif.com-gif-maker-4.gif" width="15" alt="" class="webflow-logo-tiny"></a>
+      <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="../images/ezgif.com-gif-maker-4.gif" width="15" alt="Logo" class="webflow-logo-tiny"></a>
     </div>
     <div class="footer-links"></div>
   </div>
