--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Jul 05 2023 13:56:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 05 2023 15:08:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4f98ff4116" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -83,7 +83,7 @@
         <div>
           <div>
             <div class="div-block-13"><img src="images/IMG_0005.jpg" loading="lazy" width="100" sizes="(max-width: 479px) 42vw, 100px" alt="ProfilePic" srcset="images/IMG_0005.jpg 500w, images/IMG_0005.jpg 800w, images/IMG_0005.jpg 1080w, images/IMG_0005.jpg 2512w" class="image-4"></div>
-            <p class="paragraph">Experienced data scientist with a strong foundation in full-stack Django development. Passionate about leveraging data to uncover valuable insights and drive informed decision-making. Proficient in Python, SQL, and data analysis, I excel at extracting actionable information from complex datasets. With expertise in developing robust applications using Django, I bring a well-rounded skill set to any data-driven project. Committed to continuous learning and staying at the forefront of data science and software development trends. Let&#x27;s connect and explore how I can contribute to your team&#x27;s success. References available upon request.Experienced data scientist with a strong foundation in full-stack Django development. Passionate about leveraging data to uncover valuable insights and drive informed decision-making. Proficient in Python, SQL, and data analysis, I excel at extracting actionable information from complex datasets. With expertise in developing robust applications using Django, I bring a well-rounded skill set to any data-driven project. Committed to continuous learning and staying at the forefront of data science and software development trends. Let&#x27;s connect and explore how I can contribute to your team&#x27;s success. References available upon request.</p>
+            <p class="paragraph">Experienced data scientist with a strong foundation in full-stack Django development. Passionate about leveraging data to uncover valuable insights and drive informed decision-making. Proficient in Python, SQL, and data analysis, I excel at extracting actionable information from complex datasets. With expertise in developing robust applications using Django, I bring a well-rounded skill set to any data-driven project. Committed to continuous learning and staying at the forefront of data science and software development trends. Let&#x27;s connect and explore how I can contribute to your team&#x27;s success. References available upon request.</p>
           </div>
         </div>
         <div class="skill_logo">
@@ -213,7 +213,7 @@
         <div class="uui-layout32_content-left">
           <div class="uui-heading-subheading-12">Master of Science, <span class="text-span-5">Computer Info. Science</span> with <span class="text-span-6">Cybersecurity<br><em>May 2019–Apr 2022<br></em><strong><em class="italic-text-2">Harrisburg, PA (USA)</em></strong> </span></div>
           <div class="div-block-9">
-            <div><img src="images/ezgif.com-gif-maker-4.gif" loading="lazy" width="300" alt="Logo"></div><img src="images/IMG_2658.jpeg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 45vw, (max-width: 8533px) 48vw, 4096px" srcset="images/IMG_2658.jpeg 500w, images/IMG_2658.jpeg 800w, images/IMG_2658.jpeg 1080w, images/IMG_2658.jpeg 1600w, images/IMG_2658.jpeg 2000w, images/IMG_2658.jpeg 2600w, images/IMG_2658.jpeg 3200w, images/IMG_2658.jpeg 4096w" alt="GradImg">
+            <div><img src="images/24135971-a880-474b-8c22-56223c5a1819.png" loading="lazy" width="300" alt="SchlIcon"></div><img src="images/IMG_2658.jpeg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 45vw, (max-width: 8533px) 48vw, 4096px" srcset="images/IMG_2658.jpeg 500w, images/IMG_2658.jpeg 800w, images/IMG_2658.jpeg 1080w, images/IMG_2658.jpeg 1600w, images/IMG_2658.jpeg 2000w, images/IMG_2658.jpeg 2600w, images/IMG_2658.jpeg 3200w, images/IMG_2658.jpeg 4096w" alt="GradImg">
           </div>
           <div class="uui-space-medium-7"></div>
         </div>
