--- a/work/project-1.html
+++ b/work/project-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Jul 05 2023 13:56:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 05 2023 15:08:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f30ecff4118" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -41,7 +41,7 @@
         <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-ecff4118">
           <h1 class="heading-jumbo">Project 1</h1>
           <div class="paragraph-light">Web Application</div>
-          <a href="#" class="w-inline-block">
+          <a href="https://www.africadatafoundation.org" class="w-inline-block">
             <div class="paragraph-light">Live site: <span>https://www.africadatafoundation.org</span><br></div>
           </a>
         </div>
