--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Jul 05 2023 15:08:02 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Jul 05 2023 22:50:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
           <a href="index.html" aria-current="page" class="navigation-item w-nav-link w--current">Home</a>
           <a href="#works-grid" class="navigation-item w-nav-link">work</a>
           <a href="#about" class="navigation-item w-nav-link">About</a>
-          <a href="#wf-form-Email-Form" class="navigation-item w-nav-link">Contact me</a>
+          <a href="#contact_me" class="navigation-item w-nav-link">Contact me</a>
           <a href="resume.html" class="navigation-item w-nav-link">Resume</a>
         </nav>
         <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
@@ -83,8 +83,8 @@
       <div id="w-node-_0a3be501-d9d1-bac0-2047-e21450cd4a4b-3fff4113" class="secondworkdiv">
         <a href="https://github.com/Ayokunlewaakinnawo/voxshop" class="link-block-copy w-inline-block"></a>
         <div class="work-description">
-          <a href="work/project-1.html" class="project-name-link">Project 1<br></a>
-          <div class="paragraph-light">Full Stack Developement - Django</div>
+          <a href="#" class="project-name-link">Ecommerce Site Project<br></a>
+          <div class="paragraph-light">Web Application Development</div>
         </div>
       </div>
       <div id="w-node-_0a3be501-d9d1-bac0-2047-e21450cd4a53-3fff4113" class="div-block-7">
@@ -97,9 +97,17 @@
     </div>
     <section id="about">
       <div data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fc2" style="opacity:0" class="container">
-        <div class="carrer-headline-wrap">
-          <h2 class="heading-2">My experience</h2>
-          <p class="paragraph-light">Experienced data scientist with a strong foundation in full-stack Django development. Passionate about leveraging data to uncover valuable insights and drive informed decision-making.</p>
+        <div class="div-block-17">
+          <div class="carrer-headline-wrap">
+            <h2 class="heading-2">My experience</h2>
+            <p class="paragraph-light">Experienced data scientist with a strong foundation in full-stack Django development. Passionate about leveraging data to uncover valuable insights and drive informed decision-making.</p>
+          </div>
+          <a href="resume.html" class="div-block-16 w-inline-block">
+            <div>View Resume </div>
+            <div class="html-embed-4 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-up-right-circle" viewbox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.854 10.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"></path>
+              </svg></div>
+          </a>
         </div>
         <div class="w-layout-grid work-experience-grid">
           <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fc9-3fff4113" class="work-eduposition-wrap">
@@ -148,12 +156,21 @@
       </div>
     </div>
   </div>
-  <div data-w-id="d783a17e-0b35-a13a-0448-a852d0df4a24" class="section cc-contact">
+  <section id="contact_me" data-w-id="d783a17e-0b35-a13a-0448-a852d0df4a24" class="section cc-contact">
     <div class="container">
       <div class="contact">
         <div class="contact-headline">
           <h3 class="heading">Want to get in touch?<br></h3>
-          <p class="paragraph-light">Feel free to drop a message here.</p>
+          <p class="paragraph-light">Feel free to drop a message here at,</p>
+          <a href="mailto:aymail32@gmail.com" class="w-inline-block">
+            <div class="div-block-15">
+              <div class="w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-at-fill" viewbox="0 0 16 16">
+                  <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z"></path>
+                  <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z"></path>
+                </svg></div>
+              <div>aymail32@gmail.com</div>
+            </div>
+          </a>
         </div>
         <div class="contact-form-wrap">
           <div class="w-form">
@@ -174,12 +191,45 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <div class="footer-wrap">
     <div>
       <a href="https://webflow.com/" target="_blank" class="webflow-link w-inline-block"><img src="images/ezgif.com-gif-maker-4.gif" width="15" alt="Logo" class="webflow-logo-tiny"></a>
     </div>
-    <div class="footer-links"></div>
+    <div class="footer-links">
+      <div class="div-block-10">
+        <a href="https://www.linkedin.com/in/ayo-akinnawo-978046141/" class="link-block-3 w-inline-block">
+          <div class="html-embed w-embed">
+            <?xml version="1.0" ?>
+            <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg enable-background="new 0 0 56.693 56.693" height="32px" id="Layer_1" version="1.1" viewbox="0 0 56.693 56.693" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <g>
+                <path d="M30.071,27.101v-0.077c-0.016,0.026-0.033,0.052-0.05,0.077H30.071z"></path>
+                <path d="M49.265,4.667H7.145c-2.016,0-3.651,1.596-3.651,3.563v42.613c0,1.966,1.635,3.562,3.651,3.562h42.12   c2.019,0,3.654-1.597,3.654-3.562V8.23C52.919,6.262,51.283,4.667,49.265,4.667z M18.475,46.304h-7.465V23.845h7.465V46.304z    M14.743,20.777h-0.05c-2.504,0-4.124-1.725-4.124-3.88c0-2.203,1.67-3.88,4.223-3.88c2.554,0,4.125,1.677,4.175,3.88   C18.967,19.052,17.345,20.777,14.743,20.777z M45.394,46.304h-7.465V34.286c0-3.018-1.08-5.078-3.781-5.078   c-2.062,0-3.29,1.389-3.831,2.731c-0.197,0.479-0.245,1.149-0.245,1.821v12.543h-7.465c0,0,0.098-20.354,0-22.459h7.465v3.179   c0.992-1.53,2.766-3.709,6.729-3.709c4.911,0,8.594,3.211,8.594,10.11V46.304z"></path>
+              </g>
+            </svg>
+          </div>
+        </a>
+        <a href="https://github.com/Ayokunlewaakinnawo?tab=repositories" class="w-inline-block">
+          <div class="html-embed-2 w-embed">
+            <?xml version="1.0" ?>
+            <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.0//EN' 'http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd'><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewbox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <path clip-rule="evenodd" d="M16.003,0C7.17,0,0.008,7.162,0.008,15.997  c0,7.067,4.582,13.063,10.94,15.179c0.8,0.146,1.052-0.328,1.052-0.752c0-0.38,0.008-1.442,0-2.777  c-4.449,0.967-5.371-2.107-5.371-2.107c-0.727-1.848-1.775-2.34-1.775-2.34c-1.452-0.992,0.109-0.973,0.109-0.973  c1.605,0.113,2.451,1.649,2.451,1.649c1.427,2.443,3.743,1.737,4.654,1.329c0.146-1.034,0.56-1.739,1.017-2.139  c-3.552-0.404-7.286-1.776-7.286-7.906c0-1.747,0.623-3.174,1.646-4.292C7.28,10.464,6.73,8.837,7.602,6.634  c0,0,1.343-0.43,4.398,1.641c1.276-0.355,2.645-0.532,4.005-0.538c1.359,0.006,2.727,0.183,4.005,0.538  c3.055-2.07,4.396-1.641,4.396-1.641c0.872,2.203,0.323,3.83,0.159,4.234c1.023,1.118,1.644,2.545,1.644,4.292  c0,6.146-3.74,7.498-7.304,7.893C19.479,23.548,20,24.508,20,26c0,2,0,3.902,0,4.428c0,0.428,0.258,0.901,1.07,0.746  C27.422,29.055,32,23.062,32,15.997C32,7.162,24.838,0,16.003,0z" fill="#181616" fill-rule="evenodd"></path>
+              <g>
+              <g>
+              <g>
+              <g>
+              <g>
+              <g>
+            </g></g></g></g></g></g></svg>
+          </div>
+        </a>
+        <a href="https://dribbble.com/Scarphase" class="w-inline-block">
+          <div class="html-embed-3 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-dribbble" viewbox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8 0C3.584 0 0 3.584 0 8s3.584 8 8 8c4.408 0 8-3.584 8-8s-3.592-8-8-8zm5.284 3.688a6.802 6.802 0 0 1 1.545 4.251c-.226-.043-2.482-.503-4.755-.217-.052-.112-.096-.234-.148-.355-.139-.33-.295-.668-.451-.99 2.516-1.023 3.662-2.498 3.81-2.69zM8 1.18c1.735 0 3.323.65 4.53 1.718-.122.174-1.155 1.553-3.584 2.464-1.12-2.056-2.36-3.74-2.551-4A6.95 6.95 0 0 1 8 1.18zm-2.907.642A43.123 43.123 0 0 1 7.627 5.77c-3.193.85-6.013.833-6.317.833a6.865 6.865 0 0 1 3.783-4.78zM1.163 8.01V7.8c.295.01 3.61.053 7.02-.971.199.381.381.772.555 1.162l-.27.078c-3.522 1.137-5.396 4.243-5.553 4.504a6.817 6.817 0 0 1-1.752-4.564zM8 14.837a6.785 6.785 0 0 1-4.19-1.44c.12-.252 1.509-2.924 5.361-4.269.018-.009.026-.009.044-.017a28.246 28.246 0 0 1 1.457 5.18A6.722 6.722 0 0 1 8 14.837zm3.81-1.171c-.07-.417-.435-2.412-1.328-4.868 2.143-.338 4.017.217 4.251.295a6.774 6.774 0 0 1-2.924 4.573z"></path>
+            </svg></div>
+        </a>
+      </div>
+    </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=641b5e72069a0f21c5ff410f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
